--- a/Players-card-V3/src/Card/Card.css
+++ b/Players-card-V3/src/Card/Card.css
@@ -1,7 +1,7 @@
-.card {
+/* .card {
   background-color: #111;
   border: 2px solid #fff;
   border-radius: 20px;
   padding: 20px;
   width: 300px;
-}
+} */
