--- a/Players-card-V3/src/App.css
+++ b/Players-card-V3/src/App.css
@@ -5,10 +5,10 @@ body {
   margin: 0;
   padding: 0;
 }
-main {
+/* main {
   display: flex;
-  flex-direction: column; /* Stack header and cards vertically */
-  align-items: center; /* Center children horizontally */
+  flex-direction: column;
+  align-items: center;
   background-color: #000;
   color: #fff;
   padding: 40px;
@@ -16,14 +16,15 @@ main {
   border-radius: 25px;
   max-width: 800px;
   margin: 30px auto;
-  gap: 30px; /* Space between header and cards */
-}
-h1 {
+  gap: 30px;
+} */
+
+/* h1 {
   color: crimson;
-}
-.card-container {
+} */
+/* .card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   gap: 30px;
-}
+} */
